Fix spacing bug in Twitter section

--- a/_includes/styles.css
+++ b/_includes/styles.css
@@ -404,6 +404,7 @@ textarea {
 #twitter ul {
 	list-style: none;
 	padding: 0;
+	margin-left: 0;
 }
 
 #twitter li {
